--- a/LoginWindow.ui
+++ b/LoginWindow.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="nameLE">
    <property name="geometry">
     <rect>
      <x>140</x>
@@ -23,7 +23,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
+  <widget class="QLineEdit" name="psswdLE">
    <property name="geometry">
     <rect>
      <x>140</x>
@@ -59,7 +59,7 @@
     <string>Kullanıcı Şifresi</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="loginBtn">
    <property name="geometry">
     <rect>
      <x>160</x>
