--- a/UserWindow.ui
+++ b/UserWindow.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>50</y>
+      <y>30</y>
       <width>121</width>
       <height>61</height>
      </rect>
@@ -40,8 +40,8 @@
    <widget class="QPushButton" name="userTabBtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>140</y>
+      <x>170</x>
+      <y>30</y>
       <width>121</width>
       <height>61</height>
      </rect>
@@ -63,8 +63,8 @@
    <widget class="QPushButton" name="settingsTabBtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>230</y>
+      <x>320</x>
+      <y>30</y>
       <width>121</width>
       <height>61</height>
      </rect>
@@ -86,14 +86,14 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>20</y>
-      <width>611</width>
-      <height>511</height>
+      <x>10</x>
+      <y>110</y>
+      <width>781</width>
+      <height>451</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -102,20 +102,25 @@
      <widget class="QLineEdit" name="searchTextLE">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>39</y>
+        <x>120</x>
+        <y>40</y>
         <width>151</width>
-        <height>31</height>
+        <height>21</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
      </widget>
      <widget class="QTableWidget" name="list_books">
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>110</y>
-        <width>611</width>
-        <height>381</height>
+        <y>100</y>
+        <width>781</width>
+        <height>391</height>
        </rect>
       </property>
       <column>
@@ -162,11 +167,16 @@
      <widget class="QComboBox" name="searchCatCB">
       <property name="geometry">
        <rect>
-        <x>300</x>
+        <x>500</x>
         <y>40</y>
         <width>111</width>
         <height>22</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <item>
        <property name="text">
@@ -212,11 +222,16 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>360</x>
         <y>40</y>
-        <width>91</width>
+        <width>141</width>
         <height>20</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Arama Kategorisi</string>
@@ -225,14 +240,37 @@
      <widget class="QPushButton" name="searchBtn">
       <property name="geometry">
        <rect>
-        <x>500</x>
+        <x>680</x>
         <y>40</y>
         <width>75</width>
         <height>23</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>Ara</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>40</y>
+        <width>141</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Arama Dizisi</string>
       </property>
      </widget>
     </widget>
@@ -245,8 +283,8 @@
        <rect>
         <x>0</x>
         <y>80</y>
-        <width>591</width>
-        <height>111</height>
+        <width>781</width>
+        <height>131</height>
        </rect>
       </property>
      </widget>
@@ -255,9 +293,14 @@
        <rect>
         <x>10</x>
         <y>30</y>
-        <width>101</width>
+        <width>141</width>
         <height>41</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Ödünç Alınacaklar</string>
@@ -266,11 +309,16 @@
      <widget class="QPushButton" name="borrowBtn">
       <property name="geometry">
        <rect>
-        <x>500</x>
+        <x>680</x>
         <y>220</y>
-        <width>75</width>
-        <height>23</height>
+        <width>81</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Ödünç Al</string>
@@ -290,6 +338,11 @@
         <height>41</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>Ödünçtekiler</string>
       </property>
@@ -299,29 +352,29 @@
        <rect>
         <x>10</x>
         <y>70</y>
-        <width>591</width>
-        <height>111</height>
+        <width>771</width>
+        <height>151</height>
        </rect>
       </property>
      </widget>
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>220</y>
-        <width>451</width>
-        <height>16</height>
+        <x>30</x>
+        <y>240</y>
+        <width>591</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Ödünçteki kitapları iade etmek için kütüphane görevlisine kitapları verebilirsiniz.</string>
       </property>
      </widget>
-    </widget>
-    <widget class="QWidget" name="tab_3">
-     <attribute name="title">
-      <string>Ayarlar</string>
-     </attribute>
     </widget>
    </widget>
   </widget>
